--- a/success.html
+++ b/success.html
@@ -16,7 +16,7 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">Hurraay!!</h1>
-        <p class="lead">You are successfully logged in.</p>
+        <p class="lead">You are successfully rented the house.</p>
       </div>
     </div>
     <link
